# Testing-VTK-in-QML

./: CMakeLists.txt  Main.qml  main.cpp
